--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h1 style="color: #FF82B2;">Kirby Clicker</h1>
           <h3 id="kirbyclicks" style="color: #FF82B2;">Clicks: 0</h3>
           <button onclick="document.getElementById('shop').style.display = 'block';" class="shopbuttons">&#8192<br>&#8192&#8192Shop&#8192&#8192<br>&#8192</button><br>
-          <button onclick="alert('You Got The Secret! :) :P (>*-*)> <(*-*<)')" style="color: aquamarine; background-color: aquamarine; border: none;">Secret Button</button>
+          <button style="color: aquamarine; background-color: aquamarine; border: none;">Secret Button</button>
         </center>
       </div>
       <br>
