--- a/index.html
+++ b/index.html
@@ -40,24 +40,27 @@
       </center>
       <h3 id="kirbyprclick">Kirby Per Click: 1</h3>
       <h3 id="kirbyprsec">Kirby Per Second: 0</h3>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(0, 25, 1, 0, 'item0')">+1 Kirby Per Click. Price: <span id="item0">50</span> Clicks</button>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(1, 100, 0, 1, 'item1')">+1 Kirby Per Second. Price: <span id="item1">250</span> Clicks</button>
+      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(0, 25, 1, 0, 'item0', 0, 0)">+1 Kirby Per Click. Price: <span id="item0">50</span> Clicks</button>
+      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(1, 100, 0, 1, 'item1', 0, 0)">+1 Kirby Per Second. Price: <span id="item1">250</span> Clicks</button><br><br>
+      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(2, 5000, 0, 0, 'item2', 1, 0)">+1 Kirby Per Click Every 10 Seconds. Price: <span id="item2">8000</span> Clicks</button><br><br>
+      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(3, 5001, 0, 0, 'item3', 0, 1)">+1 Kirby Per Second Every 10 Seconds. Price: <span id="item3">10000</span> Clicks</button><br><br>
     </div>
     <div id="gamescreen">
       <div id="title-head" class="title-head">
         <br>
+        <label>&#8192&#8192Music?</label><input type="checkbox" id="musica" oninput="checkmusic()">
         <center>
           <h1 style="color: #FF82B2;">Kirby Clicker</h1>
           <h3 id="kirbyclicks" style="color: #FF82B2;">Clicks: 0</h3>
           <button onclick="document.getElementById('shop').style.display = 'block';" class="shopbuttons">&#8192<br>&#8192&#8192Shop&#8192&#8192<br>&#8192</button><br>
-          <button style="color: aquamarine; background-color: aquamarine; border: none;">Secret Button</button>
+          <button onclick="alert('You Got The Secret! :) :P (>*-*)> <(*-*<)')" style="color: aquamarine; background-color: aquamarine; border: none;">Secret Button</button>
         </center>
       </div>
       <br>
       <br>
       <br>
       <center>
-        <input type="image" src="images/clickitem1.png" onclick="kirbyclick(); music1.play()">
+        <input type="image" src="images/clickitem1.png" onclick="kirbyclick(); //music1.play()">
       </center>
     </div>
   </body>
@@ -65,23 +68,28 @@
     var kirbyperclick = 1
     var kirbypersec = 0
     var clicks = 0
-    const shopcosts = [50, 250]
+    var kirbyperclickio = 0
+    var kirbypersecio = 0
+    var clicktimes = 1
+    const shopcosts = [50, 250, 8000, 10000]
     function updatescore() {
       document.getElementById("kirbyclicks").innerHTML = "Clicks: "+clicks
-      document.getElementById("kirbyprsec").innerHTML = "Kirby Per Second: "+kirbypersec
-      document.getElementById("kirbyprclick").innerHTML = "Kirby Per click: "+kirbyperclick
+      document.getElementById("kirbyprsec").innerHTML = "Kirby Per Second: "+kirbypersec+" x "+clicktimes
+      document.getElementById("kirbyprclick").innerHTML = "Kirby Per click: "+kirbyperclick+" x "+clicktimes
     }
     function kirbyclick() {
-      clicks += kirbyperclick
+      clicks += kirbyperclick*clicktimes
       updatescore()
     }
-    function checkshopitem(itemnum, pricechange, clickchange, secchange, itemid) {
+    function checkshopitem(itemnum, pricechange, clickchange, secchange, itemid, clickio, secio) {
       price = shopcosts[itemnum]
       if (clicks > price-1) {
         clicks -= price
         shopcosts[itemnum] += pricechange
         kirbyperclick += clickchange
         kirbypersec += secchange
+        kirbyperclickio += clickio
+        kirbypersecio += secio
         document.getElementById(itemid).innerHTML = shopcosts[itemnum]
         updatescore()
       }
@@ -89,9 +97,23 @@
         alert("You Dont Have Enough Clicks. You Need "+(price-clicks)+" More.")
       }
     }
+    function checkmusic() {
+      x = document.getElementById("musica")
+      if (x.checked) {
+        music1.play()
+      }
+      else {
+        music1.pause()
+      }
+    }
     setInterval(function(){
-      clicks += kirbypersec
+      clicks += kirbypersec*clicktimes
       updatescore()
     }, 1000)
+    setInterval(function(){
+      kirbyperclick += kirbyperclickio
+      kirbypersec += kirbypersecio
+      updatescore()
+    }, 10000)
   </script>
 </html>
