--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
-        background-image: url("images/background.jpeg");
+        background-image: url("images/background.jpg");
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
