--- a/index.html
+++ b/index.html
@@ -46,20 +46,21 @@
     <audio id="music1" loop>
       <source src="music/background.mp3" type="audio/mpeg">
     </audio>
-    <div id="shop" class="disable-select" style="display: none; position: absolute; top: 0; right: 0; background-color: rgba(167, 167, 167, 0.438); width: 100vw; height: 100vh; z-index: 1;">
+    <div id="shop" class="disable-select" style="z-index: 5; display: none; position: absolute; top: 0; right: 0; background-color: rgba(167, 167, 167, 0.438); width: 100vw; height: 100vh;">
       <br>
-      <button onclick="document.getElementById('shop').style.display = 'none';" style="background-color: red; color: white; border-radius: 16px; width: 32px; height: 32px; font-size: large; float: right;">&times</button>
+      <button id="closeshop" onclick="document.getElementById('shop').style.display = 'none';" style="background-color: red; color: white; border-radius: 16px; width: 32px; height: 32px; font-size: large; float: right;">&times</button>
       <center>
         <h1 style="color: white;">Welcome To The Shop</h1>
       </center>
       <h3 style="color: white;" id="kirbyprclick">Kirby Per Click: 1 x 1</h3>
       <h3 style="color: white;" id="kirbyprsec">Kirby Per Second: 0 x 1</h3>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(0, 25, 1, 0, 'item0', 0, 0)">+1 Kirby Per Click. Price: <span id="item0">50</span> Clicks</button>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(1, 100, 0, 1, 'item1', 0, 0)">+1 Kirby Per Second. Price: <span id="item1">250</span> Clicks</button><br><br>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(2, 5000, 0, 0, 'item2', 1, 0)">+1 Kirby Per Click Every 10 Seconds. Price: <span id="item2">8000</span> Clicks</button><br><br>
-      <button style="height: 32px;" class="shopbuttons" onclick="checkshopitem(3, 5001, 0, 0, 'item3', 0, 1)">+1 Kirby Per Second Every 10 Seconds. Price: <span id="item3">10000</span> Clicks</button><br><br>
+      <button id="shopitem1" style="height: 32px;" class="shopbuttons" onclick="checkshopitem(0, 25, 1, 0, 'item0', 0, 0)">+1 Kirby Per Click. Price: <span id="item0">50</span> Clicks</button>
+      <button id="shopitem2" style="height: 32px;" class="shopbuttons" onclick="checkshopitem(1, 100, 0, 1, 'item1', 0, 0)">+1 Kirby Per Second. Price: <span id="item1">250</span> Clicks</button><br><br>
+      <button id="shopitem3" style="height: 32px;" class="shopbuttons" onclick="checkshopitem(2, 5000, 0, 0, 'item2', 1, 0)">+1 Kirby Per Click Every 10 Seconds. Price: <span id="item2">8000</span> Clicks</button><br><br>
+      <button id="shopitem4" style="height: 32px;" class="shopbuttons" onclick="checkshopitem(3, 5001, 0, 0, 'item3', 0, 1)">+1 Kirby Per Second Every 10 Seconds. Price: <span id="item3">10000</span> Clicks</button><br><br>
     </div>
     <div id="gamescreen" class="disable-select">
+      <input onclick="clearInterval(movetimer); popstar.setAttribute('type', 'hidden'); clicks += 15; updatescore()" style="z-index: 1; position: absolute;" id="popstar" type="hidden" src="images/popstar.png">
       <div id="title-head" class="title-head">
         <input style="z-index: 0; position: absolute; top: 20px; left: 12px;" type="image" src="images/disk.png" id="musicdisk" onclick="checkmusic(); //music1.play()">
         <br>
@@ -67,7 +68,7 @@
         <center>
           <h1 style="color: #FF82B2;">Kirby Clicker</h1>
           <h3 id="kirbyclicks" style="color: #FF82B2;">Clicks: 0</h3>
-          <button onclick="document.getElementById('shop').style.display = 'block';" class="shopbuttons">&#8192<br>&#8192&#8192Shop&#8192&#8192<br>&#8192</button><br>
+          <button id="entershop" onclick="document.getElementById('shop').style.display = 'block';" class="shopbuttons">&#8192<br>&#8192&#8192Shop&#8192&#8192<br>&#8192</button><br>
           <button class="enable-select" onclick="//alert('You Got The Secret! :) :P (>*-*)> <(*-*<)')" style="color: rgba(127, 255, 212, 0); background-color: rgba(127, 255, 212, 0); border: none;">Secret Button</button>
         </center>
       </div>
@@ -89,7 +90,31 @@
     var kirbyperclickio = 0
     var kirbypersecio = 0
     var clicktimes = 1
+    var addtimesec = 0
+    var pausetime = 10000
+    var movetimer = ""
     const shopcosts = [50, 250, 8000, 10000]
+    function randrange(min, max) {
+      return Math.floor(Math.random() * (max - min + 1) ) + min;
+    }
+    function movepopstar() {
+      clearInterval(movetimer)
+      itemx = -50
+      timerb = 0
+      itemy = randrange(0, (window.screen.height-300))
+      movetimer = setInterval(function() {
+        timerb += 0.01
+        offsety = (-10+(20*(Math.sin(timerb*3))))
+        windowwidth = window.screen.width
+        itemx += 0.5
+        popstar.style.top = (itemy + offsety)+"px"
+        popstar.style.left = itemx+"px"
+        if (itemx > (windowwidth-710)) {
+          popstar.setAttribute("type", "hidden")
+          clearInterval(movetimer)
+        }
+      }, 1)
+    }
     function updatescore() {
       document.getElementById("kirbyclicks").innerHTML = "Clicks: "+clicks
       document.getElementById("kirbyprsec").innerHTML = "Kirby Per Second: "+kirbypersec+" x "+clicktimes
@@ -125,6 +150,17 @@
         musicplay = 0
       }
     }
+    function blurallbuttons() {
+      gamebutton.blur()
+      musicdisk.blur()
+      entershop.blur()
+      closeshop.blur()
+      i = 1
+      while (i < (shopcosts.length)+1) {
+        document.getElementById("shopitem"+i).blur()
+        i ++
+      }
+    }
     setInterval(function(){
       clicks += kirbypersec*clicktimes
       updatescore()
@@ -135,7 +171,7 @@
       updatescore()
     }, 10000)
     setInterval (function(){
-      document.getElementById("gamebutton").blur()
+      blurallbuttons()
       timer += 0.001
       document.getElementById("gamebutton").style.transform = 'rotate('+(-10+(20*(Math.sin(timer*3))))+'deg)'
       if (musicplay == 1) {
@@ -143,5 +179,11 @@
         document.getElementById("musicdisk").style.transform = 'rotate('+timer2+'deg)'
       }
     },1)
+    setInterval (function(){
+      addtimesec = randrange(1, 10)
+      popstar.setAttribute("type", "image")
+      movepopstar()
+      pausetime = 10000+(addtimesec*1000)
+    },pausetime)
   </script>
 </html>
