--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
       musicdisk.blur()
       entershop.blur()
       closeshop.blur()
+      openachievements.blur()
+      closeachievements.blur()
       i = 1
       while (i < (shopcosts.length)+1) {
         document.getElementById("shopitem"+i).blur()
