--- a/testcookie.html
+++ b/testcookie.html
@@ -146,6 +146,7 @@
       if (user != "") {
         setupclicker(user)
       } else {
+        alert(":P")
       }
     }
     function randrange(min, max) {
