--- a/testcookie.html
+++ b/testcookie.html
@@ -109,6 +109,7 @@
     const shopcosts = [50, 250, 8000, 10000]
     const achieve = [0]
     function setupclicker(clickerlist) {
+      alert(clickerlist)
       clicks = clickerlist[0]
       kirbyperclick = clickerlist[1]
       kirbypersec = clickerlist[2]
