--- a/testcookie.html
+++ b/testcookie.html
@@ -110,7 +110,7 @@
     const achieve = [0]
     function setupclicker(clickerlist) {
       alert(clickerlist)
-      clicks = clickerlist[0]
+      clicks = parseInt(clickerlist[0])
       kirbyperclick = clickerlist[1]
       kirbypersec = clickerlist[2]
       kirbyperclickio = clickerlist[3]
