--- a/testcookie.html
+++ b/testcookie.html
@@ -111,13 +111,13 @@
     function setupclicker(clickerlist) {
       alert(clickerlist)
       clicks = parseInt(clickerlist[0])
-      kirbyperclick = clickerlist[1]
-      kirbypersec = clickerlist[2]
-      kirbyperclickio = clickerlist[3]
-      kirbypersecio = clickerlist[4]
+      kirbyperclick = parseInt(clickerlist[1])
+      kirbypersec = parseInt(clickerlist[2])
+      kirbyperclickio = parseInt(clickerlist[3])
+      kirbypersecio = parseInt(clickerlist[4])
       shopcosts = clickerlist[5]
-      kirbyclicks = clickerlist[6]
-      totalclicks = clickerlist[7]
+      kirbyclicks = parseInt(clickerlist[6])
+      totalclicks = parseInt(clickerlist[7])
       achieve = clickerlist[8]
       updatescore()
     }
