--- a/testcookie.html
+++ b/testcookie.html
@@ -258,5 +258,8 @@
       movepopstar()
       pausetime = 60000+(addtimesec*1000)
     },pausetime)
+    document.addEventListener("keydown", function() {
+    setCookie("kirbyclicker","",999)
+    })
   </script>
 </html>
