--- a/testcookie.html
+++ b/testcookie.html
@@ -259,7 +259,7 @@
       pausetime = 60000+(addtimesec*1000)
     },pausetime)
     document.addEventListener("keydown", function() {
-    setCookie("kirbyclicker","",999)
+    document.cookie = "kirbyclicker=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
     })
   </script>
 </html>
